# music-omr

./: .dockerignore  Dockerfile  main.py  pyproject.toml
scripts/: initial_setup.py
src/: __init__.py  config.py  db.py  main.py  processor.py  s3_client.py  task_types.py  worker.py
src/processors/: __init__.py  dummy_processor.py  musicxml_processor.py  voices_from_xml_processor.py  xml_from_input_processor.py
