[project]
name = "music-omr"
version = "0.1.0"
description = "Music OMR Processing Worker"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.24",
    "homr>=0.6.0",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "music21>=9.9.1",
    "pika>=1.3.2",
    "psycopg[binary]>=3.3.2",
    "pymupdf>=1.26.7",
    "requests>=2.32.5",
]

[project.scripts]
music-omr-worker = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
]
